--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "supertest": "^6.3.4"
   }
 }
